# advent_of_code

./: .gitignore  Cargo.toml  README.md
daily-template/: Cargo.toml
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml  test_input1.txt
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/benches/: benchmarks-criterion.rs  benchmarks.rs
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmarks-criterion.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml  test_input1.txt
day-12/benches/: benchmarks-criterion.rs  benchmarks.rs
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml
day-14/benches/: benchmarks-criterion.rs
day-14/src/: part1.rs
day-15/: Cargo.toml
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/src/: part1.rs  part2.rs
day-17/: Cargo.toml
day-17/benches/: benchmarks-criterion.rs  benchmarks.rs
day-18/: Cargo.toml
day-19/: Cargo.toml
day-20/: Cargo.toml
day-21/: Cargo.toml
day-22/: Cargo.toml
day-23/: Cargo.toml
day-24/: Cargo.toml
day-25/: Cargo.toml
(+30 files in other folders)
